syntax = "proto2";
package douyin.core;
option go_package ="./proto";
message douyin_feed_request{
  optional int64 latest_time=1;
  optional string token=2;
}

message douyin_feed_response{
  required int32 status_code=1;
  optional string status_msg=2;
  repeated Video video_list=3;
  optional int64 next_time=4;
}
message Video{
  required int64 id=1;
  required User author=2;
  required string play_url=3;
  required string cover_url=4;
  required int64 favorite_count=5;
  required int64 comment_count=6;
  required bool is_favorite=7;
  required string title=8;
}

message User{
  required int64 id=1;
  required string name=2;
  optional int64 follow_count=3;
  optional int64 follower_count=4;
  required bool is_follow=5;
}